--- a/home-manager/waybar/style.css
+++ b/home-manager/waybar/style.css
@@ -25,7 +25,7 @@
 * {
 	border: none;
 	border-radius: 10px;
-   	font-family: "Fira Code Nerd Font" ;
+	font-family: "FiraCode Nerd Font";
 	font-size: 12px;
 	min-height: 10px;
 }
@@ -44,7 +44,7 @@ window#waybar.hidden {
 	padding-right: 10px;
 	border-radius: 10px;
 	transition: none;
-    	color: transparent;
+	color: transparent;
 	background: transparent;
 }
 #network {
@@ -67,8 +67,8 @@ window#waybar.hidden {
 	margin-bottom: 0px;
 	border-radius: 10px;
 	transition: none;
-	color: #1A1826;
-	background: #FAE3B0;
+	color: #1a1826;
+	background: #fae3b0;
 }
 #clock {
 	margin-top: 6px;
@@ -79,7 +79,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: #ABE9B3;
+	background: #abe9b3;
 	/*background: #1A1826;*/
 }
 
@@ -92,7 +92,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: #DDB6F2;
+	background: #ddb6f2;
 }
 #cpu {
 	margin-top: 6px;
@@ -103,19 +103,19 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: #96CDFB;
+	background: #96cdfb;
 }
 
 #tray {
 	margin-top: 6px;
 	margin-left: 8px;
 	padding-left: 10px;
-  	transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 	margin-bottom: 0px;
 	padding-right: 10px;
 	border-radius: 10px;
 	transition: none;
-	color: #B5E8E0;
+	color: #b5e8e0;
 	background: #161320;
 }
 
@@ -127,8 +127,8 @@ window#waybar.hidden {
 	padding-right: 5px;
 	border-radius: 10px;
 	transition: none;
-    	color: #89DCEB;
-    	background: #161320;
+	color: #89dceb;
+	background: #161320;
 }
 
 #custom-power {
@@ -142,7 +142,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: #7EBAE4;
+	background: #7ebae4;
 }
 
 #custom-wallpaper {
@@ -154,9 +154,8 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: #C9CBFF;
+	background: #c9cbff;
 }
-
 
 #custom-media {
 	margin-top: 6px;
@@ -167,7 +166,7 @@ window#waybar.hidden {
 	transition: none;
 	border-radius: 10px;
 	color: #161320;
-	background: #F2CDCD;
+	background: #f2cdcd;
 }
 #workspaces {
 	margin-top: 6px;
@@ -181,13 +180,12 @@ window#waybar.hidden {
 	color: @iris;
 	padding-left: 8px;
 	padding-right: 10px;
-}	
-
-#workspaces button.active {
-    	color: @base;
-  	background-color: @pine;
 }
 
+#workspaces button.active {
+	color: @base;
+	background-color: @pine;
+}
 
 #workspaces button:hover {
 	color: @foam;
